.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
18:05:56 **** Incremental Build of configuration Debug for project Temperature Sensor ****
make all 
make: Nothing to be done for `all'.
18:06:20 **** Incremental Build of configuration Debug for project Temperature Sensor ****
make all 
make: Nothing to be done for `all'.
18:17:33 **** Incremental Build of configuration Debug for project Temperature Sensor ****
make all 
Building file: ../Src/function.c
Invoking: MCU GCC Compiler
C:\Users\TARUC\Desktop\1-Wire-Communication-Emulation\Temperature Sensor\Debug
arm-none-eabi-gcc -mcpu=cortex-m3 -mthumb -mfloat-abi=soft '-D__weak=__attribute__((weak))' '-D__packed=__attribute__((__packed__))' -DUSE_HAL_DRIVER -DSTM32F103xB -I"C:/Users/TARUC/Desktop/1-Wire-Communication-Emulation/Temperature Sensor/Inc" -I"C:/Users/TARUC/Desktop/1-Wire-Communication-Emulation/Temperature Sensor/Drivers/STM32F1xx_HAL_Driver/Inc" -I"C:/Users/TARUC/Desktop/1-Wire-Communication-Emulation/Temperature Sensor/Drivers/STM32F1xx_HAL_Driver/Inc/Legacy" -I"C:/Users/TARUC/Desktop/1-Wire-Communication-Emulation/Temperature Sensor/Drivers/CMSIS/Device/ST/STM32F1xx/Include" -I"C:/Users/TARUC/Desktop/1-Wire-Communication-Emulation/Temperature Sensor/Drivers/CMSIS/Include" -I"C:/Users/TARUC/Desktop/1-Wire-Communication-Emulation/Temperature Sensor/Inc"  -Og -g3 -Wall -fmessage-length=0 -ffunction-sections -c -fmessage-length=0 -MMD -MP -MF"Src/function.d" -MT"Src/function.o" -o "Src/function.o" "../Src/function.c"
../Src/function.c:13:6: error: conflicting types for 'masterWriteByteWithInterrupt'
 void masterWriteByteWithInterrupt(uint8_t *byte, int dataSize){
      ^
In file included from ../Src/function.c:9:0:
C:/Users/TARUC/Desktop/1-Wire-Communication-Emulation/Temperature Sensor/Inc/function.h:14:6: note: previous declaration of 'masterWriteByteWithInterrupt' was here
 void masterWriteByteWithInterrupt(uint8_t *byte);
      ^
make: *** [Src/function.o] Error 1
18:17:45 **** Incremental Build of configuration Debug for project Temperature Sensor ****
make all 
Building file: ../Src/function.c
Invoking: MCU GCC Compiler
C:\Users\TARUC\Desktop\1-Wire-Communication-Emulation\Temperature Sensor\Debug
arm-none-eabi-gcc -mcpu=cortex-m3 -mthumb -mfloat-abi=soft '-D__weak=__attribute__((weak))' '-D__packed=__attribute__((__packed__))' -DUSE_HAL_DRIVER -DSTM32F103xB -I"C:/Users/TARUC/Desktop/1-Wire-Communication-Emulation/Temperature Sensor/Inc" -I"C:/Users/TARUC/Desktop/1-Wire-Communication-Emulation/Temperature Sensor/Drivers/STM32F1xx_HAL_Driver/Inc" -I"C:/Users/TARUC/Desktop/1-Wire-Communication-Emulation/Temperature Sensor/Drivers/STM32F1xx_HAL_Driver/Inc/Legacy" -I"C:/Users/TARUC/Desktop/1-Wire-Communication-Emulation/Temperature Sensor/Drivers/CMSIS/Device/ST/STM32F1xx/Include" -I"C:/Users/TARUC/Desktop/1-Wire-Communication-Emulation/Temperature Sensor/Drivers/CMSIS/Include" -I"C:/Users/TARUC/Desktop/1-Wire-Communication-Emulation/Temperature Sensor/Inc"  -Og -g3 -Wall -fmessage-length=0 -ffunction-sections -c -fmessage-length=0 -MMD -MP -MF"Src/function.d" -MT"Src/function.o" -o "Src/function.o" "../Src/function.c"
Finished building: ../Src/function.c
 
Building file: ../Src/main.c
Invoking: MCU GCC Compiler
C:\Users\TARUC\Desktop\1-Wire-Communication-Emulation\Temperature Sensor\Debug
arm-none-eabi-gcc -mcpu=cortex-m3 -mthumb -mfloat-abi=soft '-D__weak=__attribute__((weak))' '-D__packed=__attribute__((__packed__))' -DUSE_HAL_DRIVER -DSTM32F103xB -I"C:/Users/TARUC/Desktop/1-Wire-Communication-Emulation/Temperature Sensor/Inc" -I"C:/Users/TARUC/Desktop/1-Wire-Communication-Emulation/Temperature Sensor/Drivers/STM32F1xx_HAL_Driver/Inc" -I"C:/Users/TARUC/Desktop/1-Wire-Communication-Emulation/Temperature Sensor/Drivers/STM32F1xx_HAL_Driver/Inc/Legacy" -I"C:/Users/TARUC/Desktop/1-Wire-Communication-Emulation/Temperature Sensor/Drivers/CMSIS/Device/ST/STM32F1xx/Include" -I"C:/Users/TARUC/Desktop/1-Wire-Communication-Emulation/Temperature Sensor/Drivers/CMSIS/Include" -I"C:/Users/TARUC/Desktop/1-Wire-Communication-Emulation/Temperature Sensor/Inc"  -Og -g3 -Wall -fmessage-length=0 -ffunction-sections -c -fmessage-length=0 -MMD -MP -MF"Src/main.d" -MT"Src/main.o" -o "Src/main.o" "../Src/main.c"
Finished building: ../Src/main.c
 
Building file: ../Src/state_machine.c
Invoking: MCU GCC Compiler
C:\Users\TARUC\Desktop\1-Wire-Communication-Emulation\Temperature Sensor\Debug
arm-none-eabi-gcc -mcpu=cortex-m3 -mthumb -mfloat-abi=soft '-D__weak=__attribute__((weak))' '-D__packed=__attribute__((__packed__))' -DUSE_HAL_DRIVER -DSTM32F103xB -I"C:/Users/TARUC/Desktop/1-Wire-Communication-Emulation/Temperature Sensor/Inc" -I"C:/Users/TARUC/Desktop/1-Wire-Communication-Emulation/Temperature Sensor/Drivers/STM32F1xx_HAL_Driver/Inc" -I"C:/Users/TARUC/Desktop/1-Wire-Communication-Emulation/Temperature Sensor/Drivers/STM32F1xx_HAL_Driver/Inc/Legacy" -I"C:/Users/TARUC/Desktop/1-Wire-Communication-Emulation/Temperature Sensor/Drivers/CMSIS/Device/ST/STM32F1xx/Include" -I"C:/Users/TARUC/Desktop/1-Wire-Communication-Emulation/Temperature Sensor/Drivers/CMSIS/Include" -I"C:/Users/TARUC/Desktop/1-Wire-Communication-Emulation/Temperature Sensor/Inc"  -Og -g3 -Wall -fmessage-length=0 -ffunction-sections -c -fmessage-length=0 -MMD -MP -MF"Src/state_machine.d" -MT"Src/state_machine.o" -o "Src/state_machine.o" "../Src/state_machine.c"
Finished building: ../Src/state_machine.c
 
Building target: Temperature Sensor.elf
Invoking: MCU GCC Linker
arm-none-eabi-gcc -mcpu=cortex-m3 -mthumb -mfloat-abi=soft -specs=nosys.specs -specs=nano.specs -T"../STM32F103C8Tx_FLASH.ld" -Wl,-Map=output.map -Wl,--gc-sections -o "Temperature Sensor.elf" @"objects.list"   -lm
Finished building target: Temperature Sensor.elf
 
make --no-print-directory post-build
Generating binary and Printing size information:
arm-none-eabi-objcopy -O binary "Temperature Sensor.elf" "Temperature Sensor.bin"
arm-none-eabi-size "Temperature Sensor.elf"
   text	   data	    bss	    dec	    hex	filename
   6140	     12	   1636	   7788	   1e6c	Temperature Sensor.elf
 
18:17:51 **** Incremental Build of configuration Debug for project Temperature Sensor ****
make all 
make: Nothing to be done for `all'.
18:40:41 **** Incremental Build of configuration Debug for project Temperature Sensor ****
make all 
Building file: ../Src/function.c
Invoking: MCU GCC Compiler
C:\Users\TARUC\Desktop\1-Wire-Communication-Emulation\Temperature Sensor\Debug
arm-none-eabi-gcc -mcpu=cortex-m3 -mthumb -mfloat-abi=soft '-D__weak=__attribute__((weak))' '-D__packed=__attribute__((__packed__))' -DUSE_HAL_DRIVER -DSTM32F103xB -I"C:/Users/TARUC/Desktop/1-Wire-Communication-Emulation/Temperature Sensor/Inc" -I"C:/Users/TARUC/Desktop/1-Wire-Communication-Emulation/Temperature Sensor/Drivers/STM32F1xx_HAL_Driver/Inc" -I"C:/Users/TARUC/Desktop/1-Wire-Communication-Emulation/Temperature Sensor/Drivers/STM32F1xx_HAL_Driver/Inc/Legacy" -I"C:/Users/TARUC/Desktop/1-Wire-Communication-Emulation/Temperature Sensor/Drivers/CMSIS/Device/ST/STM32F1xx/Include" -I"C:/Users/TARUC/Desktop/1-Wire-Communication-Emulation/Temperature Sensor/Drivers/CMSIS/Include" -I"C:/Users/TARUC/Desktop/1-Wire-Communication-Emulation/Temperature Sensor/Inc"  -Og -g3 -Wall -fmessage-length=0 -ffunction-sections -c -fmessage-length=0 -MMD -MP -MF"Src/function.d" -MT"Src/function.o" -o "Src/function.o" "../Src/function.c"
Finished building: ../Src/function.c
 
Building target: Temperature Sensor.elf
Invoking: MCU GCC Linker
arm-none-eabi-gcc -mcpu=cortex-m3 -mthumb -mfloat-abi=soft -specs=nosys.specs -specs=nano.specs -T"../STM32F103C8Tx_FLASH.ld" -Wl,-Map=output.map -Wl,--gc-sections -o "Temperature Sensor.elf" @"objects.list"   -lm
Finished building target: Temperature Sensor.elf
 
make --no-print-directory post-build
Generating binary and Printing size information:
arm-none-eabi-objcopy -O binary "Temperature Sensor.elf" "Temperature Sensor.bin"
arm-none-eabi-size "Temperature Sensor.elf"
   text	   data	    bss	    dec	    hex	filename
   6140	     12	   1636	   7788	   1e6c	Temperature Sensor.elf
 
